# QuasarLink

./: README.md  custom_schema.yml  my_wiki_data.json  output.json  pyproject.toml  requirements.txt  simple_run.sh
docs/: schema.md  usage.md
examples/: sample_titles.txt
quasarlink/: __init__.py  cleaner.py  cli.py  config.py  fetcher.py  logger.py  serializer.py  utils.py
